--- a/FpPowerSensor/FpPowerSensor.vcxproj
+++ b/FpPowerSensor/FpPowerSensor.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{1c1057a6-f2e0-4745-89c6-f79cb7757adc}</ProjectGuid>
     <RootNamespace>FpPowerSensor</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+	<VersionPrefix>2.0.0.10</VersionPrefix>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
